k8s/deploy/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: magnet
  namespace: default
  labels:
    app.kubernetes.io/name: magnet
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: "kube-system-traefik-forward-auth@kubernetescrd"
    traeifk.ingress.kubernetes.io/router.entrypoints: "web"
spec:
  rules:
    - host: "magnet.example.com"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: magnet
                port:
                  number: 4000
